--- a/final/final.html
+++ b/final/final.html
@@ -33,7 +33,7 @@
     <div class="popup-content">
       <h2>Choisissez un mode de jeu</h2>
       <button class="popup-button" data-mode="Classic">Classic</button>
-      <button class="popup-button" data-mode="Speedup">Speedup</button>
+      <button class="popup-button" data-mode="Speedmode">Speedmode</button>
       <button class="popup-button" data-mode="Reverse">Reverse</button>
     </div>
   </div>
